@@ -41,11 +41,11 @@ RDEPEND="
 		openmedia? (
 			games-misc/openmsx
 			games-misc/opensfx
+			games-misc/opengfx
 		)
 		aplaymidi? ( media-sound/alsa-utils )
 		!aplaymidi? ( timidity? ( media-sound/timidity++ ) )
-	)
-	openmedia? ( games-misc/opengfx )"
+	)"
 
 src_prepare() {
 	subversion_src_prepare
