@@ -1,3 +1,7 @@
+  21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
+  openttd: added doc use flag
+
 *openttd-1.3.0_rc1 (20 Feb 2013)
 
   20 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
